--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <h1> HOTEL QUINTA DALAM</h1>
+    <head>
+        <title>HOTEL QUINTA DALAM</title>
+    </head>
+    <body>
+        <h1>Página principal</h1>
+        <hr>
+        <h2>Mi segundo encabezado</h2>
+        <p>El cliente solicita un citio web informativo para un hotel,<br>
+            donde se muestra la informacion general, musión,visón,
+            contacto, habitaciones y precios.
+        </p>
+        <!--comentarios-->
+    </body>
 </html>
