--- a/index.html
+++ b/index.html
@@ -4,7 +4,49 @@
         <title>HOTEL QUINTA DALAM</title>
     </head>
     <body>
-        <h1>Página principal</h1>
+        <h1>HOTEL QUINTA DALAM</h1>
         <hr>
+        <h2>Misión</h2>
+        <p>Brindar una experiencia de hospedaje auténtica y memorable que celebre la identidad cultural de los Pueblos Mágicos.<br>
+             Nos dedicamos a ofrecer un servicio de excelencia y calidez humana, preservando las tradiciones locales <br>
+             y garantizando un refugio de paz y confort para todos nuestros visitantes</p>
+        <hr>
+        <h2>Visión</h2>
+        <p>Consolidarnos para el año 2030 como el hotel temático referente en la región, siendo reconocidos por nuestra capacidad de <br>
+             capturar la esencia de los Pueblos Mágicos y por nuestro compromiso con la promoción de la riqueza cultural mexicana ante el mundo.</p>
+        <hr>
+        <h2>Habitaciones</h2>
+        <ul>
+            <li>Tzintzunzan</li>
+            <li>Paracho</li>
+            <li>Yunuen</li>
+            <li>Patzcuaro</li>
+            <li>Coeneo</li>
+            <li>Janitzio</li>
+            <li>Suite Quencio</li>
+            <li>Morelia</li>
+            <li>Tacambaro</li>
+            <li>Uruapan</li>
+            <li>Tlalpujagua</li>
+            <li>Cuitzeo</li>
+            <li>Cuanajo</li>
+        </ul>
+        <img src="imágenes_hotel/Cuarto.jpg" width="200"/><br>"Cuarto Paracho"
+        <hr>
+        <h2>Contacto</h2>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/profile.php?id=61584681841684">Facebook</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/quintadalam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
+            </li>
+            <li>
+                <a href="https://www.tiktok.com/@quintadalam?lang=es">TikTok</a>
+            </li>
+        </ul>
+        
+
+
     </body>
 </html>
