División en secciones y formato Co-authored-by: Pedraza-hue <Pedraza-hue@users.noreply.github.com> main

--- a/index.html
+++ b/index.html
@@ -6,47 +6,30 @@
     <body>
         <h1>HOTEL QUINTA DALAM</h1>
         <hr>
-        <h2>Misión</h2>
-        <p>Brindar una experiencia de hospedaje auténtica y memorable que celebre la identidad cultural de los Pueblos Mágicos.<br>
-             Nos dedicamos a ofrecer un servicio de excelencia y calidez humana, preservando las tradiciones locales <br>
-             y garantizando un refugio de paz y confort para todos nuestros visitantes</p>
+        <table>
+            <tr>
+                <th><a href="mision.html"> <h3>Misión</h3></a></th>
+                <th><a href="vision.html"> <h3>Visión</h3></a></th>
+                <th><a href="catalogo.html"> <h3>Catálogo</h3></a></th>
+            </tr>
+        </table>
         <hr>
-        <h2>Visión</h2>
-        <p>Consolidarnos para el año 2030 como el hotel temático referente en la región, siendo reconocidos por nuestra capacidad de <br>
-             capturar la esencia de los Pueblos Mágicos y por nuestro compromiso con la promoción de la riqueza cultural mexicana ante el mundo.</p>
-        <hr>
-        <h2>Habitaciones</h2>
-        <ul>
-            <li>Tzintzunzan</li>
-            <li>Paracho</li>
-            <li>Yunuen</li>
-            <li>Patzcuaro</li>
-            <li>Coeneo</li>
-            <li>Janitzio</li>
-            <li>Suite Quencio</li>
-            <li>Morelia</li>
-            <li>Tacambaro</li>
-            <li>Uruapan</li>
-            <li>Tlalpujagua</li>
-            <li>Cuitzeo</li>
-            <li>Cuanajo</li>
-        </ul>
-        <img src="imágenes_hotel/Cuarto.jpg" width="200"/><br>"Cuarto Paracho"
-        <hr>
+        <h2>Bienvenido</h2>
+        <p>Descubre un refugio donde el tiempo se detiene y la tradición cobra vida.<br> En el Hotel Quinta Dalam, no solo te ofrecemos una habitación, te invitamos a sumergirte en la riqueza cultural de los Pueblos Mágicos de México.<br> Ubicados en el corazón de la historia, nuestras instalaciones son un tributo a la arquitectura colonial, los colores vibrantes y la calidez que define a nuestra tierra.<br>
+
+Ya sea que busques una escapada romántica, un viaje de exploración o un momento de paz, aquí encontrarás el equilibrio perfecto entre el confort moderno y la mística ancestral.<br> Déjate envolver por la esencia de nuestras tradiciones y permite que cada rincón de nuestra casa te cuente una historia diferente.</p>
+        <img src="imágenes_hotel/Fachada.jpg" width="400"/><img src="imágenes_hotel/Lobby.jpg" width="400"/><img src="imágenes_hotel/Vista_amanecer.jpg" width="356"/>
         <h2>Contacto</h2>
         <ul>
             <li>
-                <a href="https://www.facebook.com/profile.php?id=61584681841684">Facebook</a>
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=61584681841684">Facebook</a>
             </li>
             <li>
-                <a href="https://www.instagram.com/quintadalam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
+                <a target="_blank" href="https://www.instagram.com/quintadalam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
             </li>
             <li>
-                <a href="https://www.tiktok.com/@quintadalam?lang=es">TikTok</a>
+                <a target="_blank" href="https://www.tiktok.com/@quintadalam?lang=es">TikTok</a>
             </li>
         </ul>
-        
-
-
     </body>
 </html>
