Botón Inicio para volver a index

--- a/catalogo.html
+++ b/catalogo.html
@@ -5,6 +5,8 @@
     </head>
 <body>
     <h1>Habitaciones</h1>
+      <a href="index.html"><h3>Inicio</h3></a>
+      <hr>
     <ul>
             <li>Tzintzunzan</li>
             <li>Paracho</li>
