--- a/mision.html
+++ b/mision.html
@@ -5,6 +5,8 @@
     </head>
 <body>
     <h1>Misión</h1>
+    <a href="index.html"><h3>Inicio</h3></a>
+    <hr>
           <p>Brindar una experiencia de hospedaje auténtica y memorable que celebre la identidad cultural de los Pueblos Mágicos.<br>
              Nos dedicamos a ofrecer un servicio de excelencia y calidez humana, preservando las tradiciones locales <br>
              y garantizando un refugio de paz y confort para todos nuestros visitantes</p>  
