--- a/vision.html
+++ b/vision.html
@@ -5,6 +5,8 @@
     </head>
 <body>
     <h1>Visión</h1>
+      <a href="index.html"><h3>Inicio</h3></a>
+      <hr>
      <p>Consolidarnos para el año 2030 como el hotel temático referente en la región, siendo reconocidos por nuestra capacidad de <br>
              capturar la esencia de los Pueblos Mágicos y por nuestro compromiso con la promoción de la riqueza cultural mexicana ante el mundo.</p>
 </body>
