Añadir estructura y estilo a las páginas del hotel, incluyendo navegación y formularios de gestión de habitaciones Co-authored-by: Pedraza-hue <Pedraza-hue@users.noreply.github.com>

--- a/catalogo.html
+++ b/catalogo.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-        <title>Catálogo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catálogo</title>
+    <link rel="stylesheet" href="styles.css">
     </head>
-<body>
+<body class="body-style">
+    <header>
     <h1>Habitaciones</h1>
-      <a href="index.html"><h3>Inicio</h3></a>
-      <hr>
+    <nav>
+        <div>
+            <button class="btn-style" onclick="window.location.href='index.html'">
+                 Inicio
+            </button>
+        </div>
+    </nav>
+
+    </header>
+    <main class="main-style">
+         <p>En el Hotel Quinta Dalam, cada habitación es un homenaje a la riqueza cultural de los Pueblos Mágicos de México. Nuestro catálogo de habitaciones temáticas te invita a sumergirte en la esencia de cada destino, ofreciéndote una experiencia única que combina confort moderno con la magia ancestral de nuestras tradiciones.</p>
+         <p>Desde la vibrante Tzintzuntzan hasta la encantadora Paracho, cada habitación está diseñada para transportarte a un rincón diferente de México, permitiéndote vivir la autenticidad y el encanto de nuestros Pueblos Mágicos sin salir de tu refugio de paz y confort.</p>
+         <p>Explora nuestro catálogo y descubre tu próxima aventura cultural en el Hotel Quinta Dalam, donde cada estancia es una oportunidad para enamorarte aún más de la magia que solo México puede ofrecer.</p>
     <ul>
             <li>Tzintzunzan</li>
             <li>Paracho</li>
@@ -22,6 +37,7 @@
             <li>Cuitzeo</li>
             <li>Cuanajo</li>
         </ul>
-        <img src="imágenes_hotel/Cuarto.jpg" width="200"/><br>"Cuarto Paracho"
+        <img src="imágenes_hotel/Cuarto.jpg" width="200" alt="Habitación Paracho del Hotel Quinta Dalam">
+    </main>
 </body>
 </html>
