--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HOTEL QUINTA DALAM</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-        <h1>HOTEL QUINTA DALAM</h1>
-        <hr>
-        <table>
-            <tr>
-                <th><a href="mision.html"> <h3>Misión</h3></a></th>
-                <th><a href="vision.html"> <h3>Visión</h3></a></th>
-                <th><a href="catalogo.html"> <h3>Catálogo</h3></a></th>
-            </tr>
-        </table>
-        <hr>
-        <h2>Bienvenido</h2>
-        <p>Descubre un refugio donde el tiempo se detiene y la tradición cobra vida.<br> En el Hotel Quinta Dalam, no solo te ofrecemos una habitación, te invitamos a sumergirte en la riqueza cultural de los Pueblos Mágicos de México.<br> Ubicados en el corazón de la historia, nuestras instalaciones son un tributo a la arquitectura colonial, los colores vibrantes y la calidez que define a nuestra tierra.<br>
 
-Ya sea que busques una escapada romántica, un viaje de exploración o un momento de paz, aquí encontrarás el equilibrio perfecto entre el confort moderno y la mística ancestral.<br> Déjate envolver por la esencia de nuestras tradiciones y permite que cada rincón de nuestra casa te cuente una historia diferente.</p>
-        <img src="imágenes_hotel/Fachada.jpg" width="400"/><img src="imágenes_hotel/Lobby.jpg" width="400"/><img src="imágenes_hotel/Vista_amanecer.jpg" width="356"/>
-        <h2>Contacto</h2>
-        <ul>
-            <li>
-                <a target="_blank" href="https://www.facebook.com/profile.php?id=61584681841684">Facebook</a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.instagram.com/quintadalam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.tiktok.com/@quintadalam?lang=es">TikTok</a>
-            </li>
-        </ul>
+    <body class="body-style">
+        <header>
+        <h1>HOTEL QUINTA DALAM</h1>
+        </header>
+        
+        <nav>
+            <div class="nav-wrapper">
+                <button class="btn-style" type="button" onclick="window.location.href='mision.html'">
+                    Misión
+                </button>
+
+                <button class="btn-style" type="button" onclick="window.location.href='vision.html'">
+                    Visión
+                </button>
+
+                <button class="btn-style" type="button" onclick="window.location.href='catalogo.html'">
+                    Catálogo
+                </button>
+
+                <button class="btn-style" type="button" onclick="window.location.href='formulario.html'">
+                    Formulario
+                </button>
+            </div>
+        </nav>
+
+        <main class="main-style">
+            <h2>Bienvenido</h2>
+
+            <p>Descubre un refugio donde el tiempo se detiene y la tradición cobra vida.En el Hotel Quinta Dalam, no solo te ofrecemos una habitación, te invitamos a sumergirte en la riqueza cultural de los Pueblos Mágicos de México. Ubicados en el corazón de la historia, nuestras instalaciones son un tributo a la arquitectura colonial, los colores vibrantes y la calidez que define a nuestra tierra
+            Ya sea que busques una escapada romántica, un viaje de exploración o un momento de paz, aquí encontrarás el equilibrio perfecto entre el confort moderno y la mística ancestral.Déjate envolver por la esencia de nuestras tradiciones y permite que cada rincón de nuestra casa te cuente una historia diferente.
+            </p>
+            <div>
+                <img class="img-style" src="imágenes_hotel/Fachada.jpg" width="100%" alt="Fachada del hotel">
+                <img class="img-style" src="imágenes_hotel/Lobby.jpg" width="100%" alt="Lobby del hotel">
+                <img class="img-style" src="imágenes_hotel/Vista_amanecer.jpg" width="100%" alt="Vista del amanecer">
+            </div>
+        </main>
+
+        <footer class="footer-style">
+            <h2>Contacto</h2>
+            <ul>
+                <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61584681841684">Facebook</a></li>
+                <li><a target="_blank" href="https://www.instagram.com/quintadalam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
+                <li><a target="_blank" href="https://www.tiktok.com/@quintadalam?lang=es">TikTok</a></li>
+            </ul>
+            <p>© 2024 Hotel Quinta Dalam. Todos los derechos reservados.</p>
+        </footer>
     </body>
 </html>
