--- a/mision.html
+++ b/mision.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Misión</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-<body>
+
+<body class="body-style">
+    <header>
     <h1>Misión</h1>
-    <a href="index.html"><h3>Inicio</h3></a>
-    <hr>
-          <p>Brindar una experiencia de hospedaje auténtica y memorable que celebre la identidad cultural de los Pueblos Mágicos.<br>
-             Nos dedicamos a ofrecer un servicio de excelencia y calidez humana, preservando las tradiciones locales <br>
-             y garantizando un refugio de paz y confort para todos nuestros visitantes</p>  
+    <nav>
+        <div>
+            <button class="btn-style" type="button" onclick="window.location.href='index.html'">
+                Inicio
+            </button>
+        </div>
+    </nav>
+
+    </header>
+    <main class="main-style">
+          <p>Brindar una experiencia de hospedaje auténtica y memorable que celebre la identidad cultural de los Pueblos Mágicos.Nos dedicamos a ofrecer un servicio de excelencia y calidez humana, preservando las tradiciones locales y garantizando un refugio de paz y confort para todos nuestros visitantes.<br><br>
+            En el Hotel Quinta Dalam, cada huésped es parte de nuestra familia, y cada estancia es una oportunidad para compartir la riqueza de nuestra cultura y la belleza de nuestros destinos. Nos comprometemos a ser un puente entre el pasado y el presente, invitando a nuestros visitantes a descubrir, disfrutar y enamorarse de la magia que solo los Pueblos Mágicos pueden ofrecer.
+          </p> 
+    </main> 
 </body>
 </html>
