--- a/vision.html
+++ b/vision.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Visión</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-<body>
-    <h1>Visión</h1>
-      <a href="index.html"><h3>Inicio</h3></a>
-      <hr>
-     <p>Consolidarnos para el año 2030 como el hotel temático referente en la región, siendo reconocidos por nuestra capacidad de <br>
-             capturar la esencia de los Pueblos Mágicos y por nuestro compromiso con la promoción de la riqueza cultural mexicana ante el mundo.</p>
-</body>
+    
+    <body class="body-style">
+        <h1>Visión</h1>
+        <button class="btn-style" type="button" onclick="window.location.href='index.html'">
+            Inicio
+        </button>
+        <main class="main-style">
+            <p>Consolidarnos para el año 2030 como el hotel temático referente en la región, siendo reconocidos por nuestra capacidad de capturar la esencia de los Pueblos Mágicos y por nuestro compromiso con la promoción de la riqueza cultural mexicana ante el mundo.</p>
+        </main>   
+    </body>
 </html>
