Ajustar imágenes y corregir estilo en el footer para validación W3C

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             Ya sea que busques una escapada romántica, un viaje de exploración o un momento de paz, aquí encontrarás el equilibrio perfecto entre el confort moderno y la mística ancestral.Déjate envolver por la esencia de nuestras tradiciones y permite que cada rincón de nuestra casa te cuente una historia diferente.
             </p>
             <div>
-                <img class="img-style" src="imágenes_hotel/Fachada.jpg" width="100%" alt="Fachada del hotel">
-                <img class="img-style" src="imágenes_hotel/Lobby.jpg" width="100%" alt="Lobby del hotel">
-                <img class="img-style" src="imágenes_hotel/Vista_amanecer.jpg" width="100%" alt="Vista del amanecer">
+                <img class="img-style" src="imágenes_hotel/Fachada.jpg" alt="Fachada del hotel">
+                <img class="img-style" src="imágenes_hotel/Lobby.jpg" alt="Lobby del hotel">
+                <img class="img-style" src="imágenes_hotel/Vista_amanecer.jpg" alt="Vista del amanecer">
             </div>
         </main>
 
@@ -53,6 +53,14 @@
                 <li><a target="_blank" href="https://www.tiktok.com/@quintadalam?lang=es">TikTok</a></li>
             </ul>
             <p>© 2024 Hotel Quinta Dalam. Todos los derechos reservados.</p>
+            <p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="¡CSS Válido!" >
+    </a>
+</p>
+        
         </footer>
     </body>
 </html>
